<resources>
    <string name="app_name">CBBANK- SALESKIT</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_error_title">Sorry</string>
    <string name="error_title">Oops</string>
    <string name="error_message">There was a problem loading the pokemon, please try again!</string>
    <string name="error_reload">Reload</string>
    <string name="title_activity_maps_sample">Map</string>
    <string name="error_something_bad_happened">Something bad happened. Please try again.</string>
    <string name="user_name">Tài khoản đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="expire_date">Ngày giải hạn: </string>
    <string name="company">CÔNG TY</string>
    <string name="borrow">Vay</string>
    <string name="username_en">Tài khoản đăng nhập</string>
    <string name="password_en">Mật khẩu</string>
    <string name="kpi">Chỉ tiêu</string>
    <string name="customer_list">Danh sách khách hàng</string>
    <string name="search">Tìm kiếm</string>
    <string name="hot_new">Tin tức mới nhất</string>
    <string name="recent_use">Sử dụng gần đây</string>
    <string name="find_inapp">Tìm kiếm trong ứng dụng</string>
    <string name="vn">VN</string>
    <string name="fingersprint_not_support">Finger sprint \'s not supported</string>
    <string name="fingersprint_permission">Please allow finger sprint function!</string>
    <string name="fingersprint_config">No fingerprint configured. Please register at least one fingerprint in your Device Settings</string>
    <string name="fingersprint_lockscren">Please enable lockscreen security in your Device Settings</string>
    <string name="authentication_error">Authentication error</string>
    <string name="authentication_fail">Authentication failed. Please try again!</string>
    <string name="authentication_help">Authentication help</string>
    <string name="product_borrow">Sản phẩm cho vay</string>
    <string-array name="percent">
        <item>10%</item>
        <item>10%</item>
        <item>10%</item>
        <item>20% </item>
        <item>30% </item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customer_info">Thông tin khách hàng</string>
    <string name="contact_support">Liên hệ/ Hỗ trợ</string>
    <string name="product">Sản phẩm</string>
    <string name="customer_look_up">Tra cứu khách hàng</string>
    <string name="new_p">Tin tức</string>
    <string name="trading_trackig">Theo dõi bán hàng</string>
    <string name="work_manage">Quản lý nhân viên</string>
    <string name="result_work">Kết quả công việc</string>
    <string name="customer_lead">Phân công lại khách hàng</string>
    <string name="schedule">Lịch làm việc</string>
    <string name="log_out">Đăng xuất</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Nhập email của bạn</string>
    <string name="confirm">Xác nhận</string>
    <string name="change_pass_intro">Thay đổi mật khẩu truy cập ứng dụng thông qua xác nhận mật khẩu hiện tại và nhập mật khẩu mới</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="verify_new_pass">Xác thực lại mật khẩu mới</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="lookup">Tìm kiếm</string>
    <string name="content">Nội dung</string>
    <string name="address">Địa chỉ</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="huydong_product">Sản phẩm huy động vốn</string>
    <string name="vayvon_product">Sản phẩm vay vốn</string>
    <string name="re_arrange">Phân công lại</string>
    <string name="vay_product">Sản phẩm cho vay cá nhân</string>
    <string name="assign_profile">Phân công lại hồ sơ</string>
    <string name="cb_th">Cán bộ thụ hưởng</string>
    <string name="repick_assigner">Chọn lại cán bộ xử lý</string>
    <string name="back">Quay lại</string>
    <string name="save">Lưu lại</string>
    <string name="add_apoint">Thêm cuộc hẹn</string>
    <string name="fl_name">Họ và tên *</string>
    <string name="identify_add">CMT/ ĐKKD</string>
    <string name="address_">Địa chỉ *</string>
    <string name="phone">Số điện thoại *</string>
    <string name="tuvan_product">Sản phẩm dự kiến tư vấn</string>
    <string name="enter_product">Nhập sản phẩm</string>
    <string name="note">Ghi chú</string>
    <string name="enter_note">Nhập ghi chú ở đây</string>
    <string name="date__time_metting">Ngày hẹn</string>
    <string name="upate_result">Câp nhật kết quả</string>
    <string name="result">Kết quả</string>
    <string name="enter_result">Nhập kết quả ở đây</string>
    <string name="time_new_metting">Ngày hẹn mới- Giờ hẹn</string>
    <string name="date_new_meeting">Thời gian gặp</string>
    <string name="update_result">Cập nhật kết quả</string>
    <string name="mobilize_title">Tiết kiệm có kỳ hạn lãi trả trước</string>
    <string name="detail">Thông tin chi tiết</string>
    <string name="required_file">Các giấy tờ khác theo yêu cầu của Ngân hàng Xây dựng.</string>
    <string name="foreign_passport">Người nước ngoài: Hộ chiếu/ Thị thực nhập cảnh còn hiệu lực</string>
    <string name="owned_file">Hồ sơ vay vốn</string>
    <string name="creat_profile">Tạo hồ sơ</string>
    <string name="customer_code">Mã giao dịch khách hàng</string>
    <string name="trans_code">Mã giao dịch</string>
    <string name="check_code">Khách hàng vui lòng kiểm tra mã\n giao dịch đã được gửi về mail đăng ký</string>
    <string name="back_to_home">Về trang chủ</string>
    <string name="cmt">CMT</string>
    <string name="enter_identity">Nhập CMT</string>
    <string name="enter_address">Nhập địa chỉ</string>
    <string name="enter_phone_number">Nhập số điện thoại</string>
    <string name="enter_email">Nhập email</string>
    <string name="enter_money_sent">Nhấp số tiền gửi</string>
    <string name="money_sent">Số tiền gửi</string>
    <string name="p_l_name">Họ và tên</string>
    <string name="exipired_month">Kỳ hạn (tháng)</string>
    <string name="pick_expired">Chọn kỳ hạn</string>
    <string name="interst_rate">Lãi suất (%)</string>
    <string name="pick_interest">Chọn lãi suất</string>
    <string name="root">Chi nhánh</string>
    <string name="pick_root">Chọn chi nhánh</string>
    <string name="trans_room">Phòng giao dịch</string>
    <string name="pick_transroom">Chọn phòng giao dịch</string>
    <string name="date_time_new_meeting">Ngày hẹn giao dịch</string>
    <string name="complete">Hoàn thành</string>
    <string name="creat_new_profile">Thêm mới hồ sơ khách hàng</string>
    <string name="rate_criteria">Tiêu chí đánh giá</string>
    <string name="customer_not_enought">Khách hàng không đạt tiêu chí</string>
    <string name="time_owned">Thời hạn vay (tháng)</string>
    <string name="enter_time_owned">Nhập thời hạn vay</string>
    <string name="type_comany">Loại hình cơ quan</string>
    <string name="pick_company_type">Chọn loại hình cơ quan</string>
    <string name="payment_type">Hình thức thanh toán lương  hoặc thu nhập khác</string>
    <string name="pick_payment_type">Chọn hình thức thanh toán lương hoặc thu nhập khác</string>
    <string name="pay_status">Tình hình trả gốc lãi với các TCTD trong 12 tháng qua</string>
    <string name="pick_pay_status">Tình hình trả gốc lãi với các TCTD trong 12 tháng qua</string>
    <string name="saved_money">Tiền gửi tiết kiệm</string>
    <string name="pick_save_money">Chọn tiền gửi tiết kiệm</string>
    <string name="area">Vùng miền</string>
    <string name="pick_area">Chọn vùng miền</string>
    <string name="pay_own_rate">Tỷ lệ trả nợ (Từ 0 - 100)</string>
    <string name="enter_own_pay_rate">Nhập tỷ lệ trả nợ</string>
    <string name="number_notfinished_deal">Số hợp đồng chưa kết thúc</string>
    <string name="enter_notfinsh_deal">Nhập số hợp đồng chưa kết thúc</string>
    <string name="rate_creadit">Đánh giá tín dụng</string>
    <string name="continue_step">Tiếp tục</string>
    <string name="not_allow_own">Khách hàng đủ điều kiện vay</string>
    <string name="date_of_birth">Ngày sinh</string>
    <string name="money_gn">Số tiền vay</string>
    <string name="rate_money_ineed">Tỷ lệ số tiền cho vay/ nhu cầu</string>
    <string name="type_colla">Loại tài sản</string>
    <string name="pick_transport_type">Chọn loại tài sản</string>
    <string name="own_limit">Hạn mức vay</string>
    <string name="enter_collateral">Nhập tỷ lệ cho vay tối đa</string>
    <string name="money_own">Số tiền vay</string>
    <string name="info_collateral">Thông tin tài sản đảm bảo</string>
    <string name="collateral">Tài sản đảm bảo</string>
    <string name="cancel">Hủy</string>
    <string name="cannot_get_data">Không thể lấy dữ liệu</string>
    <string name="gender">Giới tính</string>
    <string name="indentity">Chứng minh thư</string>
    <string name="provide_location">Nơi cấp</string>
    <string name="enter_location">Nhập nơi cấp</string>
    <string name="date_provide">Ngày cấp</string>
    <string name="education_level">Trình độ học vấn</string>
    <string name="pick_education_level">Chọn trình độ học vấn</string>
    <string name="house_own_status">Tình trạng sở hữu nhà</string>
    <string name="pick_house_status">Chọn tình trạng sở hữu nhà</string>
    <string name="marriage_status">Tình trạng hôn nhân</string>
    <string name="pick_marriage">Chọn tình trạng hôn nhân</string>
    <string name="appoint_list">Danh sách cuộc hẹn</string>
    <string name="remeet">Hẹn gặp lại</string>
    <string name="none">Chưa có kết quả</string>
    <string name="accpet_meet">Đồng ý gặp</string>
    <string name="cancel_meet">Hủy bỏ</string>
    <string name="enter_name">Nhập tên</string>
    <string name="enter_date_meeting">Nhập ngày hẹn</string>
    <string name="enter_time_meeting">Nhập giờ hẹn</string>
    <string name="date_time">Chọn ngày</string>
    <string name="take_picture">Ảnh chụp</string>
    <string name="open_gallery">Mở bộ sưu tập</string>
    <string name="app_file_provider">com.example.android.supportv4.my_files_new</string>
    <string name="status">Trạng thái</string>
    <string name="customer_enought">Khách hàng đạt tiêu chí</string>
    <string name="use_value_property">Giá trị tài sản được sử dụng</string>
    <string name="creat_new_appoint">Xem cuộc hẹn</string>
    <string name="enter_birth_date">Nhập ngày sinh</string>
    <string name="enter_date">Nhập ngày</string>
    <string name="enter_indentity">Nhập Chứng minh thư</string>
    <string name="empty">Chưa có</string>
    <string name="limit_rate_own">Tỷ lệ cho vay tối đa (%)</string>
    <string name="creat_new_file">Tạo mới hồ sơ</string>
    <string name="contract_type">Hình thức hợp đồng lao động</string>
    <string name="improve_rate">Tỉ lệ tăng trưởng hàng năm</string>
    <string name="enter_improve_rate">Nhập tỷ lệ tăng trưởng</string>
    <string name="money_own_hope">Số tiền vay nguyện vọng</string>
    <string name="enter_money_own">Nhập số tiền</string>
    <string name="enter_time_bank">Nhập thời gian</string>
    <string name="time_bank">Thời gian quan hệ với ngân hàng(tháng )</string>
    <string name="selector_develop">Triển vọng phát triển của ngành kinh doanh đang hoạt động</string>
    <string name="partner_ship">Quan hệ với đối tác mua hàng</string>
    <string name="has_pass_book">Tiền gửi tiết kiệm tại ngân hàng hay không</string>
    <string name="experience_year">Thời gian công tác trong lĩnh vực chuyên môn hiện tại</string>
    <string name="enter_value">Nhập giá trị</string>
    <string name="rework_profile">Phân công lại hồ sơ</string>
    <string name="email_not_format">Email không đúng định dạng!</string>
    <string name="customer_type">Chọn loại khách hàng</string>
    <string name="money_condition">Số tiền vay phải nhỏ hơn hạn mức vay!</string>
    <string name="range_credit">Hạn mức tín dụng</string>
</resources>