<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".features.customer.add_new_customer.CustomerCompletedFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_55sdp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_160sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_12sdp"
                android:src="@drawable/ic_done_step" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/p_l_name"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/semi_black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/date_of_birth"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tv_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/semi_black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/money_gn"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tv_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/semi_black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/time_owned"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tv_time_own"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/semi_black"
                android:textSize="@dimen/_13sdp" />


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/bt_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/round_gradient_orange"
                android:fontFamily="@font/montserrat_medium"
                android:paddingStart="@dimen/_18sdp"
                android:paddingEnd="@dimen/_18sdp"
                android:text="@string/complete"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />
        </FrameLayout>
    </RelativeLayout>
</ScrollView>